--- a/SmarkPark/SmarkPark/Controller/Find/View/FindCarportCell.xib
+++ b/SmarkPark/SmarkPark/Controller/Find/View/FindCarportCell.xib
@@ -1,21 +1,92 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="FindCarportCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="124" id="KGk-i7-Jjw" customClass="FindCarportCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="124"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="123.5"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Find_location" translatesAutoresizingMaskIntoConstraints="NO" id="ssc-1D-tUO">
+                        <rect key="frame" x="15" y="10" width="16" height="16"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </imageView>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="right_arrow" translatesAutoresizingMaskIntoConstraints="NO" id="WTw-J8-IGc">
+                        <rect key="frame" x="281" y="50" width="24" height="24"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="24" id="IpB-88-Zhb"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="位置" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w0H-Je-3HO">
+                        <rect key="frame" x="41" y="10" width="29" height="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <color key="textColor" red="0.039215686270000001" green="0.039215686270000001" blue="0.039215686270000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="空闲时间：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DIn-YF-Hyd">
+                        <rect key="frame" x="41" y="55" width="61.5" height="14.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="价格：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PV5-d6-BjZ">
+                        <rect key="frame" x="41" y="74.5" width="37" height="14.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="车主：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nEJ-My-ed2">
+                        <rect key="frame" x="41" y="94" width="37" height="14.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QpC-fu-lIK">
+                        <rect key="frame" x="20" y="123" width="256" height="1"/>
+                        <color key="backgroundColor" red="0.84705882349999995" green="0.84705882349999995" blue="0.84705882349999995" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="L2W-Cs-PJ7"/>
+                        </constraints>
+                    </view>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="bottom" secondItem="QpC-fu-lIK" secondAttribute="bottom" id="3DQ-cl-QNT"/>
+                    <constraint firstItem="nEJ-My-ed2" firstAttribute="top" secondItem="PV5-d6-BjZ" secondAttribute="bottom" constant="5" id="Ag2-gh-gEO"/>
+                    <constraint firstAttribute="trailing" secondItem="WTw-J8-IGc" secondAttribute="trailing" constant="15" id="ElW-MY-SLX"/>
+                    <constraint firstItem="w0H-Je-3HO" firstAttribute="leading" secondItem="ssc-1D-tUO" secondAttribute="trailing" constant="10" id="NLN-TR-Nn2"/>
+                    <constraint firstItem="WTw-J8-IGc" firstAttribute="leading" secondItem="QpC-fu-lIK" secondAttribute="trailing" constant="5" id="O5A-Az-B4b"/>
+                    <constraint firstItem="PV5-d6-BjZ" firstAttribute="leading" secondItem="DIn-YF-Hyd" secondAttribute="leading" id="OVC-99-KJ4"/>
+                    <constraint firstItem="WTw-J8-IGc" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="THs-OO-UX1"/>
+                    <constraint firstItem="w0H-Je-3HO" firstAttribute="centerY" secondItem="ssc-1D-tUO" secondAttribute="centerY" id="UpJ-HR-gRL"/>
+                    <constraint firstItem="ssc-1D-tUO" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="Xz1-fE-Aoc"/>
+                    <constraint firstItem="PV5-d6-BjZ" firstAttribute="top" secondItem="DIn-YF-Hyd" secondAttribute="bottom" constant="5" id="gHp-ZD-eXq"/>
+                    <constraint firstItem="nEJ-My-ed2" firstAttribute="leading" secondItem="DIn-YF-Hyd" secondAttribute="leading" id="gHs-NG-U36"/>
+                    <constraint firstItem="WTw-J8-IGc" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="w0H-Je-3HO" secondAttribute="trailing" constant="5" id="gsF-3L-8pZ"/>
+                    <constraint firstAttribute="bottom" secondItem="nEJ-My-ed2" secondAttribute="bottom" constant="15" id="nrA-Th-FdC"/>
+                    <constraint firstItem="QpC-fu-lIK" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="rII-hj-7d8"/>
+                    <constraint firstItem="DIn-YF-Hyd" firstAttribute="leading" secondItem="w0H-Je-3HO" secondAttribute="leading" id="vuV-d1-Fgo"/>
+                    <constraint firstItem="ssc-1D-tUO" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="z47-j2-2yw"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
+            <point key="canvasLocation" x="34" y="94"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="Find_location" width="16" height="16"/>
+        <image name="right_arrow" width="24" height="24"/>
+    </resources>
 </document>
